# sudachi-lookup

./: .gitignore  NOTICE  README.ja.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.pages.config.ts
.github/workflows/: check.yml  deploy-full-production.yml
app/: globals.css  layout.tsx  lookup-app.tsx  lookup-types.ts  page.tsx  pages-entry.tsx  search.worker.ts
config/: dictionary-release.json
docs/: architecture.md  canonical-headword-filtering.md  compound-navigation.md  development.md  edition-membership.md  feasibility.md  split-boundary-format.md  structure-match-lookup.md  structure-tail-lookup.md
docs/ja/: architecture.md  canonical-headword-filtering.md  compound-navigation.md  development.md  edition-membership.md  feasibility.md  split-boundary-format.md  structure-match-lookup.md
pages/: 404.html  index.html  notices.html
public/: _headers
public/data/sample/: manifest.json
tests/: dictionary-format.test.mjs
tools/dictionary/: build-dictionary-web.mjs  build-sample.mjs  check-release-config.mjs  export-dictionary.mjs  install-official-dictionary.mjs  release-config.mjs  validate-web.mjs  verify-edition-prefixes.mjs
tools/dictionary/exporter/: Cargo.toml
tools/dictionary/exporter/src/: main.rs
tools/dictionary/fixtures/: sample.json
tools/docs/: check-locales.mjs
tools/site/: build-pages.mjs  deploy-pages.mjs
worker/: index.ts
