[package]
name = "sudachi-lexicon-exporter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
flate2 = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git", rev = "90fd6068c80c2fc3b63e0dbab0e341475bad4d8f" }
unicode-normalization = "0.1"
